# OllamaPix2TextGUI

./: .gitignore  README.md  pyproject.toml  requirements.txt
wsl_ollama_ocr/: run_ocr.py
